--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -18,7 +18,7 @@ hostname = "my-ubuntu-client"
 ################################################################################
 # Common User Vars reqd. for all Cluster Instances and client EC2 Instance     #
 ################################################################################
-key_name = "my-aws-keypair-name"
+ssh_key_name = "my-aws-keypair-name"
 #tags = {
 #  "Environment" = "Test"
 #  "Owner"       = "MeMyselfandI"
